# collaborative-canvas-toolkit

./: README.md  main.py  pyproject.toml  spec.md
.github/workflows/: pages.yml
src/: crdt.py  demo.py  hashdag.py  mesh.py  render.py  replica.py  viz_dag.py
src/backends/: dag_viz.py  hashdag.py  lww.py  ormap.py  rga.py
src/cli/: main.py
src/core/: clock.py  harness.py  render.py  replica.py  scene.py  transport.py
tests/: test_crdt.py  test_harness.py  test_hashdag.py  test_lww.py  test_mesh.py  test_render_gif.py  test_rga.py  test_viz_dag.py
tests/integration/: test_live_mesh.py
web/: crdt.js  crdt.test.mjs  index.html
